Cargando funciones helpers en la vista

--- a/templates/layouts/blank.html
+++ b/templates/layouts/blank.html
@@ -1,18 +1,21 @@
+{% from main.templates import load_css, load_js %}
 <html>
 <head>
 	<title>{{locals['title']}}</title>
   <meta charset="UTF-8">
-  <link rel="shortcut icon" href="{{locals['constants']['STATICS_URL']}}favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="{{locals['constants']['static_url']}}favicon.ico" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   {% block css %}{% end %}
   {% block js_top %}{% end %}
+  {% raw load_css(locals['csss']) %}
 </head>
 <body>
   header
 	{% block content %}{% end %}
   footer
   {% block js_bottom %}{% end %}
+  {% raw load_js(locals['jss']) %}
 </body>
 </html>
