Formulario de login

--- a/templates/login/index.html
+++ b/templates/login/index.html
@@ -1,4 +1,25 @@
 {% extends '../layouts/blank.html' %}
 {% block content %}
-<h1>Login</h1>
+<div class="login-page">
+  <div class="form">
+    <i class="fa fa-map-marker" aria-hidden="true" id="logo-brand"></i>
+    <form class="login-form" action="{{locals['constants']['base_url']}}login/acceder" method="post">
+      <input type="text" placeholder="usuario" name="usuario"/>
+      <input type="password" placeholder="contrasenia" name="contrasenia"/>
+      <input type="hidden" name="{{locals['constants']['csrf']['key']}}" value="{{locals['constants']['csrf']['secret']}}">
+      <button type="submit">login</button>
+      <p class="mensaje-error">{{locals['mensaje']}}</p>
+      <p class="message">No está registrado? <a href="#" onclick="crearCuenta()">Crear cuenta</a></p>
+    </form>
+  </div>
+</div>
+<footer>
+  <p>Powered by: <a href="http://softweb.pe/">Software Web Perú</a> © 2011-2018 </p>
+</footer>
+
+<script type="text/javascript">
+  function crearCuenta() {
+    alert("Operación no disponible");
+  }
+</script>
 {% end %}
