--- a/static/assets/css/error.css
+++ b/static/assets/css/error.css
@@ -10,6 +10,6 @@ a > i { margin-right: 5px; font-size: 1.25em !important; }
 .error-container {margin-top: 20%;}
 .row { display: table-row; height: 30%; }
 .row:nth-child(1) { background-color: var(--primary-color); color: var(--nav-primary-color); }
-.row:nth-child(2) { color: var(--background-primary-color); padding-top: 20px; background: var(--primary-color); }
+.row:nth-child(2) { padding-top: 20px; }
 .bottom-align-text{ position: absolute; bottom: 0; right: 0; }
 .error-divider{ padding-top: 25px; }
